<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textViewSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/environmental"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnvironmentalQuest1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quest_environmental_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest1Alternative1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest1_alternative1" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest1Alternative2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest1_alternative2" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest1Alternative3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest1_alternative3" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest1Alternative4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest1_alternative4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupEnvironmentalQuest1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest1A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest1_answer1" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest1B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest1_answer2" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest1C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest1_answer3" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest1D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest1_answer4" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnvironmentalQuest2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quest_environmental_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupEnvironmentalQuest2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest2A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest2_answer1" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest2B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest2_answer2" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest2C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest2_answer3" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnvironmentalQuest3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quest_environmental_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest3Alternative1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest3_alternative1" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest3Alternative2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest3_alternative2" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest3Alternative3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest3_alternative3" />

                <TextView
                    android:id="@+id/textViewEnvironmentalQuest3Alternative4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environmental_quest3_alternative4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupEnvironmentalQuest3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest3A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest3_answer1" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest3B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest3_answer2" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest3C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest3_answer3" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest3D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest3_answer4" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest3E"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest3_answer5" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnvironmentalQuest4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quest_environmental_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupEnvironmentalQuest4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest4A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest4_answer1" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest4B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest4_answer2" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest4C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest4_answer3" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest4D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest4_answer4" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest4E"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest4_answer5" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnvironmentalQuest5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quest_environmental_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupEnvironmentalQuest5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest5A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest5_answer1" />

                    <RadioButton
                        android:id="@+id/radioButtonEnvironmentalQuest5B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/environmental_quest5_answer2" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>